finished Mlp results

--- a/results/ResultsAnalysis.ipynb
+++ b/results/ResultsAnalysis.ipynb
@@ -2,8 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 94,
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'create_formatted_df' from 'results_processing' (/Users/bartoszgawin/Desktop/ML/RoundtableML/non-homogenous-paper/results/results_processing.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[94], line 10\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msns\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m---> 10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mresults_processing\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_groups, get_dataset, flatten_results, get_top_models, plot_per_model_metrics, clean_model_names, pivot_per_dataset, plot_per_datasets, create_formatted_df\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'create_formatted_df' from 'results_processing' (/Users/bartoszgawin/Desktop/ML/RoundtableML/non-homogenous-paper/results/results_processing.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -41,7 +53,7 @@
    "outputs": [],
    "source": [
     "lcn_data = clean_model_names(pd.read_csv('LcnTotalResults.csv'))\n",
-    "mlp_data = clean_model_names(pd.read_csv('MlpPartialResults.csv'))\n",
+    "mlp_data = clean_model_names(pd.read_csv('MlpTotalResults.csv'))\n",
     "multi_data = clean_model_names(pd.read_csv('MultiModalResults.csv'))\n",
     "\n",
     "data_groups = get_groups()"
