--- a/results/ResultsQuery.ipynb
+++ b/results/ResultsQuery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "ex = ExperimentClient(verbose = True)\n",
@@ -67,8 +67,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========= 0 ========\n",
+      "request time: 5.203074216842651\n",
+      "parse time: 0.14678382873535156\n",
+      "length: 1000\n",
+      "========= 1 ========\n",
+      "request time: 3.8291521072387695\n",
+      "parse time: 0.0687568187713623\n",
+      "length: 1000\n",
+      "========= 2 ========\n",
+      "request time: 6.802064895629883\n",
+      "parse time: 0.07110404968261719\n",
+      "length: 1000\n",
+      "========= 3 ========\n",
+      "request time: 3.555927038192749\n",
+      "parse time: 0.0392611026763916\n",
+      "length: 1000\n",
+      "========= 4 ========\n",
+      "request time: 3.6083290576934814\n",
+      "parse time: 0.06936407089233398\n",
+      "length: 1000\n",
+      "========= 5 ========\n",
+      "request time: 3.577115058898926\n",
+      "parse time: 0.0695958137512207\n",
+      "length: 1000\n",
+      "========= 6 ========\n",
+      "request time: 4.973895072937012\n",
+      "parse time: 0.13472223281860352\n",
+      "length: 1000\n",
+      "========= 7 ========\n",
+      "request time: 2.998137950897217\n",
+      "parse time: 0.01810622215270996\n",
+      "length: 105\n"
+     ]
+    },
     {
      "ename": "ConnectionError",
      "evalue": "('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))",
@@ -98,7 +136,7 @@
       "\u001B[0;31mProtocolError\u001B[0m: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001B[0;31mConnectionError\u001B[0m                           Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[8], line 14\u001B[0m\n\u001B[1;32m     12\u001B[0m headers \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mName\u001B[39m\u001B[38;5;124m'\u001B[39m: usr_name,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSeceret\u001B[39m\u001B[38;5;124m'\u001B[39m: tabExpTrackAPIKey,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mContent-Type\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mapplication/json\u001B[39m\u001B[38;5;124m'\u001B[39m}\n\u001B[1;32m     13\u001B[0m t1 \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[0;32m---> 14\u001B[0m resp_unparse \u001B[38;5;241m=\u001B[39m \u001B[43mrequests\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrequest\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mheaders\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mheaders\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdata\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpayload\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m t2\u001B[38;5;241m=\u001B[39mtime\u001B[38;5;241m.\u001B[39mtime()\n\u001B[1;32m     16\u001B[0m resp \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mloads(resp_unparse\u001B[38;5;241m.\u001B[39mtext)\n",
+      "Cell \u001B[0;32mIn[7], line 14\u001B[0m\n\u001B[1;32m     12\u001B[0m headers \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mName\u001B[39m\u001B[38;5;124m'\u001B[39m: usr_name,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mSeceret\u001B[39m\u001B[38;5;124m'\u001B[39m: tabExpTrackAPIKey,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mContent-Type\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mapplication/json\u001B[39m\u001B[38;5;124m'\u001B[39m}\n\u001B[1;32m     13\u001B[0m t1 \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[0;32m---> 14\u001B[0m resp_unparse \u001B[38;5;241m=\u001B[39m \u001B[43mrequests\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrequest\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mheaders\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mheaders\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdata\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpayload\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m t2\u001B[38;5;241m=\u001B[39mtime\u001B[38;5;241m.\u001B[39mtime()\n\u001B[1;32m     16\u001B[0m resp \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mloads(resp_unparse\u001B[38;5;241m.\u001B[39mtext)\n",
       "File \u001B[0;32m/opt/homebrew/lib/python3.11/site-packages/requests/api.py:59\u001B[0m, in \u001B[0;36mrequest\u001B[0;34m(method, url, **kwargs)\u001B[0m\n\u001B[1;32m     55\u001B[0m \u001B[38;5;66;03m# By using the 'with' statement we are sure the session is closed, thus we\u001B[39;00m\n\u001B[1;32m     56\u001B[0m \u001B[38;5;66;03m# avoid leaving sockets open which can trigger a ResourceWarning in some\u001B[39;00m\n\u001B[1;32m     57\u001B[0m \u001B[38;5;66;03m# cases, and look like a memory leak in others.\u001B[39;00m\n\u001B[1;32m     58\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m sessions\u001B[38;5;241m.\u001B[39mSession() \u001B[38;5;28;01mas\u001B[39;00m session:\n\u001B[0;32m---> 59\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43msession\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrequest\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmethod\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mmethod\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43murl\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py:589\u001B[0m, in \u001B[0;36mSession.request\u001B[0;34m(self, method, url, params, data, headers, cookies, files, auth, timeout, allow_redirects, proxies, hooks, stream, verify, cert, json)\u001B[0m\n\u001B[1;32m    584\u001B[0m send_kwargs \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m    585\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtimeout\u001B[39m\u001B[38;5;124m\"\u001B[39m: timeout,\n\u001B[1;32m    586\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mallow_redirects\u001B[39m\u001B[38;5;124m\"\u001B[39m: allow_redirects,\n\u001B[1;32m    587\u001B[0m }\n\u001B[1;32m    588\u001B[0m send_kwargs\u001B[38;5;241m.\u001B[39mupdate(settings)\n\u001B[0;32m--> 589\u001B[0m resp \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mprep\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43msend_kwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    591\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m resp\n",
       "File \u001B[0;32m/opt/homebrew/lib/python3.11/site-packages/requests/sessions.py:703\u001B[0m, in \u001B[0;36mSession.send\u001B[0;34m(self, request, **kwargs)\u001B[0m\n\u001B[1;32m    700\u001B[0m start \u001B[38;5;241m=\u001B[39m preferred_clock()\n\u001B[1;32m    702\u001B[0m \u001B[38;5;66;03m# Send the request\u001B[39;00m\n\u001B[0;32m--> 703\u001B[0m r \u001B[38;5;241m=\u001B[39m \u001B[43madapter\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrequest\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    705\u001B[0m \u001B[38;5;66;03m# Total elapsed time of the request (approximately)\u001B[39;00m\n\u001B[1;32m    706\u001B[0m elapsed \u001B[38;5;241m=\u001B[39m preferred_clock() \u001B[38;5;241m-\u001B[39m start\n",
@@ -146,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "7577"
+      "text/plain": "7105"
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "df_model = [] # model\n",
@@ -187,7 +225,7 @@
     "    except:\n",
     "        df_metrics.append(None)\n",
     "else:\n",
-    "    sklearn_df = pd.DataFrame({\n",
+    "    mlp_df = pd.DataFrame({\n",
     "        'model': df_model,\n",
     "        'dataset': df_dataset,\n",
     "        'hyperparameters': df_hyperparameters,\n",
@@ -203,57 +241,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      model     dataset   \n",
-      "0      SK_histGradBoost_reg  336-361083  \\\n",
-      "1       SK_decisionTree_reg  336-361083   \n",
-      "2     rforestry_lintree_reg  336-361083   \n",
-      "3              CatBoost_reg  336-361083   \n",
-      "4                LGBM_class  334-361285   \n",
-      "...                     ...         ...   \n",
-      "7572   SK_histGradBoost_reg  335-361096   \n",
-      "7573    SK_randomForest_reg  335-361096   \n",
-      "7574     rforestry_tree_reg  335-361096   \n",
-      "7575           CatBoost_reg  335-361096   \n",
-      "7576            XGBoost_reg  335-361096   \n",
+      "              model     dataset   \n",
+      "0     Mlp_sigm_cont  337-361275  \\\n",
+      "1      Mlp_relu_cat  334-361110   \n",
+      "2     Mlp_sigm_cont  336-361074   \n",
+      "3      Mlp_sigm_cat  335-361104   \n",
+      "4      Mlp_relu_cat  335-361097   \n",
+      "...             ...         ...   \n",
+      "7100  Mlp_relu_cont  336-361279   \n",
+      "7101   Mlp_relu_cat  335-361289   \n",
+      "7102  Mlp_relu_cont  336-361279   \n",
+      "7103   Mlp_relu_cat  335-361289   \n",
+      "7104   Mlp_relu_cat  335-361289   \n",
       "\n",
       "                                        hyperparameters   \n",
-      "0     {'learning_rate': 0.03461559161693327, 'max_de...  \\\n",
-      "1     {'max_depth': None, 'criterion': 'squared_erro...   \n",
-      "2     {'mtry_fraq': 0.37995388058270396, 'nodesize_s...   \n",
-      "3     {'learning_rate': 0.7803083370088788, 'random_...   \n",
-      "4     {'n_estimators': 92, 'learning_rate': 0.100198...   \n",
+      "0     {'depth': 12, 'seed': 42, 'regularize': None, ...  \\\n",
+      "1     {'depth': 9, 'seed': 42, 'regularize': 0.25, '...   \n",
+      "2     {'depth': 9, 'seed': 42, 'regularize': None, '...   \n",
+      "3     {'depth': 8, 'seed': 42, 'regularize': None, '...   \n",
+      "4     {'depth': 6, 'seed': 42, 'regularize': 'bn', '...   \n",
       "...                                                 ...   \n",
-      "7572  {'learning_rate': 0.005139571680092427, 'max_d...   \n",
-      "7573  {'max_depth': None, 'n_estimators': 35, 'crite...   \n",
-      "7574  {'mtry_fraq': 0.74094716521703, 'nodesize_stri...   \n",
-      "7575  {'learning_rate': 0.0485232628417558, 'random_...   \n",
-      "7576  {'max_depth': 3, 'n_estimators': 196, 'min_chi...   \n",
+      "7100  {'depth': 2, 'seed': 42, 'regularize': 0.5, 'e...   \n",
+      "7101  {'depth': 2, 'seed': 42, 'regularize': None, '...   \n",
+      "7102  {'depth': 10, 'seed': 42, 'regularize': None, ...   \n",
+      "7103  {'depth': 10, 'seed': 42, 'regularize': 'bn', ...   \n",
+      "7104  {'depth': 7, 'seed': 42, 'regularize': 'bn', '...   \n",
       "\n",
       "                                                metrics  \n",
-      "0     {'train_metrics': {'r2_score': 0.4505995423405...  \n",
-      "1     {'train_metrics': {'r2_score': 0.4924746328463...  \n",
-      "2     {'train_metrics': {'r2_score': 0.3889172136098...  \n",
-      "3     {'train_metrics': {'r2_score': 0.4895379216450...  \n",
-      "4     {'train_metrics': {'accuracy_score': 0.776, 'c...  \n",
+      "0     {'train_loss': 0.0007977968439989739, 'train_m...  \n",
+      "1     {'train_loss': 0.0006932403922080994, 'train_m...  \n",
+      "2     {'train_loss': 4.652510661565851e-05, 'train_m...  \n",
+      "3     {'train_loss': 1.2292179851531981, 'train_metr...  \n",
+      "4     {'train_loss': 174.63632300779395, 'train_metr...  \n",
       "...                                                 ...  \n",
-      "7572  {'train_metrics': {'r2_score': 0.6002827417533...  \n",
-      "7573  {'train_metrics': {'r2_score': 0.9684474667859...  \n",
-      "7574  {'train_metrics': {'r2_score': 0.9872097764819...  \n",
-      "7575  {'train_metrics': {'r2_score': 0.9835875200815...  \n",
-      "7576  {'train_metrics': {'r2_score': 0.9722731923353...  \n",
+      "7100  {'train_loss': 0.019622042208225648, 'train_me...  \n",
+      "7101  {'train_loss': 177225.77875, 'train_metrics': ...  \n",
+      "7102  {'train_loss': 0.006074376319371959, 'train_me...  \n",
+      "7103  {'train_loss': 312349.47715, 'train_metrics': ...  \n",
+      "7104                   {'train_loss': None, 'epoch': 1}  \n",
       "\n",
-      "[7577 rows x 4 columns]\n"
+      "[7105 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(sklearn_df)"
+    "print(mlp_df)"
    ],
    "metadata": {
     "collapsed": false,
@@ -264,10 +302,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [],
    "source": [
-    "sklearn_df.to_csv('MlpTotalResults.csv', index=False)"
+    "mlp_df.to_csv('MlpTotalResults.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
